# MachineVision-Learning

./: README.md
Adaptive_cross-linking_of_textons/: Адаптивная_сшивка_текстонов.ipynb
Corridor_in_matr/: Коридор_в_матрице.ipynb
Cube-App/: cube-full.txt  main.py  pyproject.toml
Texture_generation_via_FFT/: Генерация_текстуры_через_FFT.ipynb
adaptive_text_stitching/: Adaptive text stitching.ipynb
horizon/: README.md  horizon.ipynb
t1000/: t1000.ipynb
texture/: texture_on_cube.ipynb
tricolor_rotating_pyramid/: tricolor_rotating_pyramid.ipynb
