[tool.poetry]
name = "test-app"
version = "0.1.0"
description = ""
authors = ["NeZorinEgor <zorin-ep@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
tk = "^0.1.0"
tkintertable = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
